2009-03-08 Starboy Qi <starboy.qi@gmail.com>

    * Add extcalc, a awesome calculator.
    * Update fcitx to latest version.

2009-03-08 MA Yue <velly.empire@gmail.com>

    * Add Firefox stable repository.
    * Add Typespeed, a typing practise game.

2009-03-07 CHEN Yangyang <skabyy@gmail.com>

    * Automatically save/load repository response time.

2009-03-04 Homer Xing <homer.xing@gmail.com>

    * Fixed a locale fetching bug.

2009-03-02 Homer Xing <homer.xing@gmail.com>

    * Improve mplayer-vod.

2009-03-02 Starboy Qi <starboy.qi@gmail.com>

    * Display sound card information in hardware-info pane.

2009-02-28 Homer Xing <homer.xing@gmail.com>

    * Merged translation from Launchpad
    * Added repository in Ghana & Peru
    * Did not raise exceptions if "apt-key del" failed
    * Did not install GNOMEArtNG on Ubuntu 10.04
    * Did not install Skype on Ubuntu x86_64
    * Vuze would be installed directly from repository for Ubuntu >= 9.10
    * Deleted setup.py
    * Ignored error for "sudo apt-get update"
    * Removed bug "release unlocked lock"
    * Changed display format of response time
    * Removed bug "Non-ANSI characters cannot be matched"
    * Reduced the number of regular expressions created in searching progress
    * Adopted Gobject signals
    * Improved the bug report window
    * Added one button on toolbar
    * Improved the efficiency of context window
    * Reduced image size
    * Adopted tree-view in left pane
    * Randomly display a tip after logging in GNOME

2009-01-10 Homer Xing <homer.xing@gmail.com>

    Many things have happened. 
    I forgot to write them down in ChangeLog. Please forgive me.
    But I have written some ChangeLog in http://ailurus.cn/

2009-10-01 Homer Xing <homer.xing@gmail.com>

	* New version released.

2009-09-17 Homer Xing <homer.xing@gmail.com>

	Eliminate two bugs.

2009-08-17 Homer Xing <homer.xing@gmail.com>

	Upgrade VirtualBox to 3.0.4

2009-08-03 Homer Xing <homer.xing@gmail.com>
